Combine analysis and results sections

--- a/paper/report.tex
+++ b/paper/report.tex
@@ -179,7 +179,7 @@ did in homework 2). Figure ~\ref{fig:outliers-1-1} and Figure
 \label{fig:outliers-9-3}
 \end{figure}
 
-\subsection{Analysis}
+\subsection{Analysis and Results}
 
 In their primary analysis, the researchers build statistical models separately
 for each imaging run and create regressors by convolving a delta function
@@ -362,17 +362,6 @@ We have identified several Python packages we will use for our analysis.
   \item{Matplotlib}
   \item{Seaborn}
 \end{itemize}
-
-\section{Results}
-
-Thus far, we have run some initial analyses on our data. We have performed
-convolution as well as a linear regression. The following is a plot of a middle
-slice of the $\hat{\beta}_1$ of a subject's brain.
-
-\includegraphics[width=\textwidth]{beta1_middle_slice.png}
-
-We also have code for our first pass at the logistic regression using the
-behavioral data.
 
 \section{Discussion}
 
