--- a/paper/report.tex
+++ b/paper/report.tex
@@ -4,7 +4,7 @@
 \usepackage{graphicx}
 \graphicspath{ {images/} }
 
-\title{The title of your project proposal}
+\title{The Neural Basis for Loss Aversion Revisited}
 \author{
   Jara, Jon\\
   \texttt{jonmigueljara}
